--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "book-vault-backend",
+  "version": "1.0.0",
+  "description": "Backend for Book Vault MERN project",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "bcrypt": "^5.1.1",
@@ -17,8 +25,14 @@
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^11.2.3",
     "nodemailer": "^7.0.3",
-    "nodemon": "^3.1.9",
     "slugify": "^1.6.6",
     "stripe": "^17.5.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "license": "ISC"
 }
